k8s/deploy-astro.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: astro
  labels:
    app.kubernetes.io/name: astro
    app.kubernetes.io/instance: astro
    app.kubernetes.io/version: "0.0.1"
spec:
  type: NodePort
  ports:
    - port: 3000
      name: astro-port
  selector:
    app.kubernetes.io/name: astro
    app.kubernetes.io/instance: astro
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro
  labels:
    app.kubernetes.io/name: astro
    app.kubernetes.io/instance: astro
    app.kubernetes.io/version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: astro
      app.kubernetes.io/instance: astro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: astro
        app.kubernetes.io/instance: astro
    spec:
      securityContext:
        runAsUser: 100
      containers:
        - name: astro
          image: "astro:skf"
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
---
