k8s/deploy-rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/version: "2.2.2"
spec:
  ports:
    - port: 5672
      name: rabbitmq
  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/version: "2.2.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/instance: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/instance: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: "rabbitmq:management"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5672
---
