k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-controller"
  namespace: "default"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - secureby.design
    secretName: secureby.design
  rules:
  - host: secureby.design
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: astro
           port: 
             number: 3000
